--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puppeteer-dex-price-proxy",
+  "name": "coinmarketcap-proxy",
   "version": "1.0.0",
   "description": "Proxy server using Puppeteer to scrape token prices from CoinMarketCap DEX.",
   "main": "index.js",
